Button added to layout

--- a/Magic8Ball/app/src/main/res/values/strings.xml
+++ b/Magic8Ball/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Magic8Ball</string>
+    <string name="instruction_text">Ask me a Question</string>
+    <string name="response_Button_Text">Let the Oracle Speak</string>
 </resources>
